--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -48,7 +48,12 @@
             {% else %}
               Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}
             {% endif %}
-  </p>
+          </p>
+        {% elsif post.collection == 'workinprogress' and post.date %}
+          <p class="page__date">
+            <strong>Last updated:</strong>
+            {{ post.date | date: "%B %Y" }}
+          </p>
         {% elsif post.date %}
          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
